Updates from Overleaf

--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -408,6 +408,9 @@ respectively \cite{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cros
 \textcolor{red}{FIGURE SHOWING THE TOTAL (+ BREAKDOWN) NEUTRINO CC CROSS-SECTION AS A FUNCTION OF ENERGY. IS THERE AN UPDATED VERSION THAT INCLUDES MEC? - CAN'T FIND ONE ONLINE.. IS THERE A NC VERSION TOO?}
 
 \section{SBND}\label{sec:SBND}
+
+\textcolor{red}{DETAILS ON FIDUCIAL VOLUMES ETC.}
+
 \gls{sbnd} was purposely designed to be the near detector of the \gls{sbn} program and has an active volume with dimensions (4, 4, 5) m containing 112 tons of liquid argon. It consists of two \glspl{tpc}, where the central shared cathode sits in the middle of the detector with an anode either side as is shown in \FigureRef{fig:sbnd_schematic}. Each of the \glspl{apa} consist of three wire planes where the first and second induction plane are orientated at $\pm 60^{\circ}$ to the vertical and the collection plane is vertical. In all cases, the wire plane spacing and the wire pitch are 3 mm. The nominal electric field in each of the \glspl{tpc} is 500 V/m \cite{SBN_Proposal}. 
 
 \begin{figure}[!h]
