--- a/glossary.tex
+++ b/glossary.tex
@@ -21,6 +21,8 @@
 \newacronym{fermilab}{Fermilab}{Fermi National Accelerator Laboratory}
 \newacronym{fnal}{FNAL}{Fermi National Accelerator Laboratory}
 \newacronym{gallex}{GALLEX}{Gallium Experiment}
+\newacronym{geant4}{Geant4}{GEometry ANd Tracking}
+\newacronym{genie}{GENIE}{Generates Events for Neutrino Interaction Experiments}
 \newacronym{icarus}{ICARUS}{Imaging Cosmic and Rare Underground Signals}
 \newacronym{karmen}{KARMEN}{Karlsruhe Rutherford Medium Energy Neutrino}
 \newacronym{larsoft}{LArSoft}{Liquid Argon Software}
