--- a/mythesis.bib
+++ b/mythesis.bib
@@ -791,7 +791,8 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 }
 
 @misc{ICARUS_image,
-  title = "{Schematic of the ICARUS detector. [Online] Available: https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths [2022, January].}",
+  title = "{Schematic of the ICARUS detector.}",
+  note = "{[Online] Available: https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths [January, 2022].}",
   author = {{Sandbox Studio, Chicago}}
 }
 
@@ -852,6 +853,41 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 
 
 % Shower reco stuff
+@misc{larsoft,
+title = "{LArSoft}",
+howpublished = {\href{https://larsoft.org/}{https://larsoft.org/}},
+note = "{[Accessed: July, 2022]}"
+}
+
+@article{larsoft_paper,
+    author = "Snider, E. L. and Petrillo, G.",
+    editor = "Mount, Richard and Tull, Craig",
+    title = "{LArSoft: Toolkit for Simulation, Reconstruction and Analysis of Liquid Argon TPC Neutrino Detectors}",
+    reportNumber = "FERMILAB-CONF-17-052-CD",
+    doi = "10.1088/1742-6596/898/4/042057",
+    journal = "J. Phys. Conf. Ser.",
+    volume = "898",
+    number = "4",
+    pages = "042057",
+    year = "2017"
+}
+
+@misc{gaushitfinder,
+title = "{SBND Recombination Study for Shower Calorimetry}",
+author = "{Tyley, E.}",
+year = "2019",
+howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}},
+note = "{[Accessed: July, 2022]}"
+}
+
+@misc{recombination_0.64,
+title = "{GausHitFinder Hit Finding and Fitting}",
+author = "{Usher, T.}",
+year = "2018",
+howpublished = {\href{https://indico.fnal.gov/event/18523/contributions/47921/attachments/29850/36753/GaussHitFinder121118.pdf}{https://indico.fnal.gov/event/18523/contributions/47921\\/attachments/29850/36753/GaussHitFinder121118.pdf}},
+note = "{[Accessed: July, 2022]}"
+}
+
 @article{ArgoNeuT_ESTAR_paper,
   title = "{Demonstration of MeV-scale physics in liquid argon time projection chambers using ArgoNeuT}",
   author = {Acciarri, R. and others},
@@ -868,7 +904,8 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 }
 
 @misc{ESTAR_Database,
-  title = "{ESTAR, PSTAR, and ASTAR: Computer Programs for Calculating Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions (version 1.2.3). [Online] Available: http://physics.nist.gov/Star [2021, September]. National Institute of Standards and Technology, Gaithersburg, MD.}",
+  title = "{ESTAR, PSTAR, and ASTAR: Computer Programs for Calculating Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions (version 1.2.3).}",
+  note = "{[Online] Available: http://physics.nist.gov/Star [September, 2021]. National Institute of Standards and Technology, Gaithersburg, MD.}",
   author = {Berger, M.J. and Coursey, J.S. and Zucker, M.A. and Chang, J.}
 }
 
