--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -1,44 +1,48 @@
-\chapter{Energy Reconstruction}
-\label{chap:Energy Reco}
+\chapter{Electromagnetic Shower Energy Reconstruction in SBND}
+\label{chap:Energy_Reco}
+\section{Motivation for improving the shower energy reconstruction}
 
-\section{Pandora/Larsoft Overview?}
+Important for the selections - directly used as one of the cuts. 
+EM showers is the driving factor in obtaining Enu reco.
+
+
+\section{Event Production and Reconstruction in LArSoft}
 
 Use vertex sample - make life easier for Pandora.
 
+\gls{mc} event production and analysis is performed using the \gls{larsoft} framework which interfaces with a number of other frameworks such as \gls{genie} for event generation, \gls{geant4} for event simulation and Pandora for event reconstruction. \gls{larsoft} has been designed to work for many liquid argon based neutrino experiments including \gls{sbn} with many of the underlying algorithms being common to all experiments \cite{larsoft}\cite{larsoft_paper}.
+
+Reconstructed quantities are the main focus of this section and these are typically derived from the reconstructed charge which is obtained in the following steps;
 \begin{itemize}
-    \item Current induced on wires.
-    \item Extract signal from noise and e-field etc.
-    \item some more stuff
-    \item Pandora patter recognition clusters the reconstructed hits.
-    \item Initially 2d clusters are made. Clusters are then matched between planes to produce 3d clusters
+    \item Drifting electrons induce current on a wire.
+    \item Extract the signal on the wire from the E-field and any noise. 
+    \item A hit finding algorithm identifies any significant waveforms and classifies these as hits across a certain time window (number of ticks). 
+    \item The Pandora pattern recognition software clusters the hits together such that they represent an individual particle. This is initially done in 2D, followed by matching the clusters between the wire planes in order to produce 3D clusters.
+    \item The lineage of the particles is identified and the particles are classified as either track or shower like.
 \end{itemize}
 
-Patter recognition classifies particles as either track-like or shower-like. Naturally, the shower reconstruction tools are only run on the shower-like particles.
+A number of different hit finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases the GausHitFinder works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in long waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. These long waveforms may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. 
+
+\section{Overview of Shower Energy Reconstruction in SBND}\label{subchap:shower reco overview}
+
+Currently, there are three algorithms available for reconstructing \gls{em} shower energy within \gls{sbnd} as part of the \textit{LArPandoraShower} suite of tools, each of which are described below. Regardless of the algorithm used, the initial approach is the same for all three methods which is as follows,
+\begin{enumerate}
+    \item Identify the hits associated with a given wire plane.
+    \item Integrate the hits to obtain the associated charge in \gls{adc} units whilst correcting for electron lifetime. 
+    \item Convert the charge in \gls{adc} units to a conventional charge (number of electrons) using the calibration constant which is part of the calorimetry algorithm (This step was not performed in the case of the \textit{Linear Energy tool}). 
+\end{enumerate}
+
+Once the charge of a hit has been determined, the final steps which involve converting the charge to energy become method dependent. The other major detector effect that still needs to be considered is recombination, which is modelled by the Modified Box Recombination Model and given by  
+\begin{equation}\label{eqn:ModBox}
+    \frac{dE}{dx} = \frac{\exp{(\frac{\beta}{\rho \mathcal{E}} W_{ion}.\frac{dQ}{dx}}) - \alpha}{\frac{\beta}{\rho \mathcal{E}}},
+\end{equation}
+where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. The recombination correction, \textit{R}, is given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$.
 
 
-
-
-\section{Motivation for improving the shower energy reconstruction}
-Important for the selections. 
-Need to correct for SCE + explain SCE. Show non linear EField
-
-The electric field in the \Glspl{tpc} are designed to be uniform between the \Gls{cpa} and the \Glspl{apa}, however, due to for example cosmic muons, argon atom may be ionised. The ionised electrons and argon ions then drift towards the anode and cathode respectively, however the drift time for the ions is much greater than the electron drift time. This results in a positive charge build up towards the cathode which in turn will pull the drifting electrons towards the \Gls{tpc} centre. This is known as the \Gls{sce} and causes the electric field in the \Gls{tpc} to be non-uniform. An example of the modified non-uniform electric field is shown in \FigureRef{fig:SCE_map}. Space charge is expected to be a non-negligible effect in SBND, therefore any shower reconstruction algorithms need to be able to correct for a recombination effect which is electric field dependent. This is further discussed in \SectionRef{subchap:shower reco overview}.
-
-\begin{figure}[h]
-    \centering
-    \includegraphics[width = \largefigwidth]{figures-chap4/SCE_map_SBND.png}
-    \caption{The expected electric field offset relative to the nominal value of 0.5 kV/cm at z~=~250cm in SBND (the centre of the detector) caused by SCE.}
-    \label{fig:SCE_map}
-\end{figure}
-
-
-\section{Overview of shower energy reconstruction in SBND}\label{subchap:shower reco overview}
-Reconstructing shower energies predominantly involves calculating the charge collected by the \Gls{tpc} wire planes and estimating an associated energy. Detector dependant effects such as electron lifetime and recombination need to be accounted for. Electron lifetime is a measure of the free electrons lost due to attachment to impurities in the liquid argon whilst drifting across the detector \cite{ArgoNeuT_electron_lifetime_paper}. When argon atoms are ionised, the resulting argon ion and ionised electron may immediately recombine. This is known as the recombination effect and the magnitude of the effect is largely due to the local electric field \cite{ArgoNeuT_recombination_paper}. 
-
-Correcting for the recombination effect directly is not straightforward because it is dependent on $\frac{dE}{dx}$ (see \EquationRef{eqn:ModBox} and unlike for track-like objects, reconstructing the 3D trajectory for showers is difficult \cite{MicroBooNE_photon_Ereco_paper}). Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below; 1) Assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
+Since the recombination model is $\frac{dE}{dx}$ dependent, an accurate path length \textit{dx} is needed which requires 3D reconstruction of the direction. Doing this for a shower which is inherently \textit{messy} is not straightforward and unlike the electron lifetime it is therefore difficult to directly correct for the recombination effect \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below; 1) Assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
 
 \subsection{Linear Energy Tool}\label{subchap:Linear Energy Tool}
-The first shower energy reconstruction method developed as part of the \textit{PandoraShower} suite of tools was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge. A sample of \Gls{mc} muons are used as calibration because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
+The first shower energy reconstruction method developed was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge from \gls{mip} muons. A sample of \Gls{mc} muons are used as calibration because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
 
 
 
@@ -59,10 +63,14 @@ The first shower energy reconstruction method developed as part of the \textit{P
 
 
 
-To estimate the reconstructed shower energy, the hits from the shower are found and integrated over to obtain the charge in \Gls{adc} units. The charge is corrected to account for electron lifetime and then the linear dependency is used to convert the charge to deposited energy. A further recombination correction is not required as it has already been accounted for in the charge to energy conversion. The fractional energy resolution of the \textit{Shower Linear Energy tool} is shown in \FigureRef{fig:linear_kGeVelectrons}. 
+To estimate the reconstructed shower energy, the charge found to be associated with a shower would be used to directly read off the associated energy from the linear calibration. A further recombination correction is not required as it has already been accounted for in the charge to energy conversion. The fractional energy resolution of the \textit{Shower Linear Energy tool} is shown in \FigureRef{fig:linear_kGeVelectrons}. 
 
 \subsection{Number of Electrons to Energy}\label{subchap:kGeVToElectrons}
-The \textit{Shower Num Electrons Energy Tool} was developed to move away from being reliant on in-house calibration curves and instead use the pre-existing calibration available in the \Gls{sbnd} portion of the \Gls{larsoft} framework. The method to estimate the reconstructed energy is as follows; the charge for each hit is found and corrected for electron lifetime as is described in \SectionRef{subchap:Linear Energy Tool}, a correction for the recombination effect is applied, the charge is then converted to the number of electrons using the \Gls{sbnd} \textit{CalorimetryAlg} and finally the number of electrons are converted to energy by use of a \textit{GeVToElectrons} scale factor which is the inverse of the energy required to ionise and argon atom. The recombination correction is taken to be a constant value of 0.64 for all hits. (NEED REFERENCE). \FigureRef{fig:linear_kGeVelectrons} compares the reconstructed energy from \textit{Shower Num Electrons Energy Tool} to the true energy of the showering electrons alongside the same results from the \textit{Shower Linear Energy tool}.
+The \textit{Shower Num Electrons Energy tool} was developed to move away from being reliant on in-house calibration curves and instead use the pre-existing calibration available in the \Gls{sbnd} portion of the \Gls{larsoft} framework. This has the advantage of being much more flexible to physics changes. For example a change in the recombination correction could be investigated by changing a single number, whereas, for the \textit{Linear Energy tool}, the calibration curves would have to be regenerated. The number of electrons are found from the \gls{adc} charge and are then directly converted to energy using a \textit{GeVToElectrons} scale factor which is the inverse of the energy required to ionise an argon atom. With this method a correction to account for recombination is still required. A nominal recombination value of 0.64 is used for all hits. 
+
+The nominal recombination value was calculated by simulating electrons with a large (effectively infinite) lifetime and turning off any diffusion effects. The only thing remaining that may impact the collected energy is the recombination effect and therefore taking the ratio between the collected and deposited energy will give a value for the recombination value. For electrons, it was found that the recombination value was fairly constant at a value of 0.64 across a broad range of energies \cite{recombination_0.64}. 
+
+
 
 \newpage
 \begin{figure}[h]
@@ -71,6 +79,8 @@ The \textit{Shower Num Electrons Energy Tool} was developed to move away from be
     \caption{Comparison of the \textit{Shower Linear Energy Tool} (Blue) and the \textit{Shower Num Electrons Energy Tool} (Red) with the true energy of the showering electrons.}
     \label{fig:linear_kGeVelectrons}
 \end{figure}
+
+\begin{comment}
 
 An attempt to correct for the \Gls{sce} can be made with this method by utilising the Modified Box Recombination Model which is given by \begin{equation}\label{eqn:ModBox}
     \frac{dE}{dx} = \frac{\exp{(\frac{\beta}{\rho \mathcal{E}} W_{ion}.\frac{dQ}{dx}}) - \alpha}{\frac{\beta}{\rho \mathcal{E}}}
@@ -92,10 +102,12 @@ Shortcoming (don't know how much to put here? don't know if i want to emphasise 
     \item Correcting for SCE 'properly' is not straightforward either - using a fixed nominal dE/dx isn't ideal.
 \end{itemize}
 
-\section{Current method (ESTAR)}
-The \textit{Shower ESTAR Energy tool} is the currently used method to reconstruct shower energy in SBND. It combines the ESTAR database along with the Modified Box recombination model. This approach was first used in the in \Gls{argoneut} experiment \cite{ArgoNeuT_ESTAR_paper}. The ESTAR database is provided by the \Gls{nist} and gives the track length of electrons in liquid argon for energies ranging from 0.01 MeV to 1000 MeV \cite{ESTAR_Database}.
+\end{comment}
 
-The $\frac{dE}{dx}$ values are calculated by dividing the energy by the track length for each entry in the ESTAR database. The deposited charge, Q, is then found by using \EquationRef{eqn:ModBox} to find $\frac{dQ}{dx}$ and multiplying by the track length, dx. This now allows the deposited charge and energy to be related. If $\mathcal{E}$ in \EquationRef{eqn:ModBox} is taken to be a variable, the above process is repeated whilst iterating over a set values of $\mathcal{E}$. This results in a 3D curve relating both the deposited charge and electric field to energy as is shown in \FigureRef{fig:ESTAR lookup curve}. The overall reconstruction chain is similar to that described in \SectionRef{subchap:kGeVToElectrons}, but instead of directly converting the number of electrons using a scale factor, this lookup curve is used the interpolate the energy from the deposited charge and electric field. Electron lifetime corrections are applied as before, however a direct recombination correction is not required as this has been accounted for in the lookup curve. 
+\subsection{ESTAR Method}
+The \textit{Shower ESTAR Energy tool} combines the ESTAR database provided by the \gls{nist} along with the Modified Box recombination model in an approach that was first used by the \Gls{argoneut} experiment \cite{ArgoNeuT_ESTAR_paper}. The ESTAR database provides the track length of electrons in various materials, including liquid argon, for energies ranging from 0.01 MeV to 1000 MeV \cite{ESTAR_Database}.
+
+$\frac{dE}{dx}$ values may be calculated by dividing the energy by the track length for each entry in the ESTAR database. The deposited charge, \textit{Q}, can then found by using \EquationRef{eqn:ModBox} to find $\frac{dQ}{dx}$ and multiplying by the track length, \textit{dx}. This now allows the collected charge and energy to be related. If $\mathcal{E}$ in \EquationRef{eqn:ModBox} is taken to be a variable, the above process may be repeated whilst iterating over a set values of $\mathcal{E}$. This results in a 3D curve relating both the deposited charge and electric field to energy as is shown in \FigureRef{fig:ESTAR lookup curve}. The energy may then be interpolated from the collected charge and the appropriate electric field. As with the \textit{Linear Energy tool}, a direct correction for recombination isn't needed as it is again accounted for in the lookup curve. 
 
 \begin{figure}[h]
     \centering
@@ -103,6 +115,10 @@ The $\frac{dE}{dx}$ values are calculated by dividing the energy by the track le
     \caption{ESTAR Lookup Curve}
     \label{fig:ESTAR lookup curve}
 \end{figure}
+
+\section{Shower Energy Reconstruction Performance}
+
+
 
 To assess the performance of the \textit{Shower ESTAR Energy tool}, the the reconstructed energy of each hit was summed up for all the hits in a shower. This was compared the sum of the true energy of all the hits.
 
